metadata/objects/SDO_Tool__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only active tools will be displayed on the SDO Tools Homepage.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Information__c</fullName>
        <label>Advanced Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Tools</fullName>
                </value>
                <value>
                    <fullName>Everyday Tools</fullName>
                </value>
                <value>
                    <fullName>Advanced Tools</fullName>
                </value>
                <value>
                    <fullName>Portals / Communities / Chatter Answers Branding</fullName>
                </value>
                <value>
                    <fullName>Sites</fullName>
                </value>
                <value>
                    <fullName>Old Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want this tool to show up in the Favorite Tools section of the homepage.</inlineHelpText>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open by default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pop_new_window__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pop new window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Cloud__c</fullName>
        <label>Product Cloud</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Analytics Cloud</fullName>
                </value>
                <value>
                    <fullName>Community Cloud</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>URL of the page to pop in.</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fa_icon_name__c</fullName>
        <inlineHelpText>The font-awesome icon name of the tool, used for rendering the tools icon.  Typically &apos;fa-&apos; something. 
http://www.keenthemes.com/preview/metronic/theme/templates/admin2/ui_icons.html</inlineHelpText>
        <label>fa icon name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SDO Tool</label>
    <listViews>
        <fullName>Advanced</fullName>
        <columns>NAME</columns>
        <columns>Open__c</columns>
        <columns>Order__c</columns>
        <columns>URL__c</columns>
        <columns>Width__c</columns>
        <columns>Height__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Advanced Tools</value>
        </filters>
        <label>Advanced Tools</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>URL__c</columns>
        <columns>Active__c</columns>
        <columns>Product_Cloud__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Everyday_Tools</fullName>
        <columns>NAME</columns>
        <columns>Open__c</columns>
        <columns>Order__c</columns>
        <columns>URL__c</columns>
        <columns>Width__c</columns>
        <columns>Height__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Everyday Tools</value>
        </filters>
        <label>Everyday Tools</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sites_Tools</fullName>
        <columns>NAME</columns>
        <columns>Open__c</columns>
        <columns>Order__c</columns>
        <columns>URL__c</columns>
        <columns>Width__c</columns>
        <columns>Height__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Sites</value>
        </filters>
        <label>Sites Tools</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SDO Tool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDO Tools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>